force-app/main/default/objects/Apttus_Billing__CustomNumberingConfigurationSetting__c/Apttus_Billing__CustomNumberingConfigurationSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Schema used to control the creation and maintenance of the various Custom Numbering Settings.</description>
    <label>Custom Numbering Configuration Setting</label>
</CustomObject>