force-app/main/default/objects/Apttus_Billing__CustomNumberingConfigurationSetting__c/fields/Apttus_Billing__CustomNumberingEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CustomNumberingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to enable/disable custom numbering.</description>
    <inlineHelpText>Checkbox to enable/disable custom numbering.</inlineHelpText>
    <label>Custom Numbering Enabled</label>
    <type>Checkbox</type>
</CustomField>