force-app/main/default/objects/Apttus_Billing__CustomNumberingConfigurationSetting__c/fields/Apttus_Billing__DefaultEntryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DefaultEntryId__c</fullName>
    <description>ID of the Custom Numbering Entry that pertains to the default entry for the specified object type.</description>
    <inlineHelpText>ID of the Custom Numbering Entry that pertains to the default entry for the specified object type.</inlineHelpText>
    <label>Default Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>