force-app/main/default/objects/Apttus_Billing__CustomNumberingConfigurationSetting__c/fields/Apttus_Billing__FieldOneEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldOneEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</description>
    <inlineHelpText>Checkbox to determine if this field will be used when constructing and looking up a Custom Number Entry.</inlineHelpText>
    <label>Field One Enabled</label>
    <type>Checkbox</type>
</CustomField>