force-app/main/default/objects/Apttus_Billing__CustomNumberingConfigurationSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__CustomNumberingEnabled__c</columns>
    <columns>Apttus_Billing__DefaultEntryId__c</columns>
    <columns>Apttus_Billing__FieldFiveEnabled__c</columns>
    <columns>Apttus_Billing__FieldFourEnabled__c</columns>
    <columns>Apttus_Billing__FieldOneEnabled__c</columns>
    <columns>Apttus_Billing__FieldThreeEnabled__c</columns>
    <columns>Apttus_Billing__FieldTwoEnabled__c</columns>
    <columns>Apttus_Billing__ObjectType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>